# StreamedInference_Edge

./: .gitignore  ESP32_CAM_FINAL_SETUP.md  ESP32_DEPLOYMENT_SUMMARY.md  ESP32_FLASHING_GUIDE.md  README.md  download.py  float32_esp32_analysis.md  plan.txt  prepare_float32_weights.py  quantization_test_results.md  quantize_model.py  test_esp32_cam_setup.py  test_float32_weights.py  test_quantization_basic.py  test_quantized_model.py
esp32_float32_weights/: esp32_tokens.h  gtoken.py  model_config.json
esp32_inference/: CMakeLists.txt  flash_esp32.bat  flash_esp32.sh
esp32_inference/main/: CMakeLists.txt  app_main.c  attention.c  attention.h  fixed_point_math.c  fixed_point_math.h  float32_math.c  float32_math.h  lm_head.c  lm_head.h  mlp.c  mlp.h  tinyllm_inference.c  tinyllm_inference.h  tokenizer.c  tokenizer.h  weight_loader.c  weight_loader.h
esp32_weights/: model_config.json  quantization_scales.json
